Fix overflow on product title

--- a/style.scss
+++ b/style.scss
@@ -599,6 +599,7 @@ body {
         padding: 0;
         margin: 0;
         font-size: 2.4rem;
+        line-height: 2.4rem;
       }
     }
     nav {
